demo/flux/httpbin-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    expose-apps: "true"
    istio.io/dataplane-mode: ambient
