demo/flux/postgresql-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql
  labels:
    expose-apps: "true"
    istio.io/dataplane-mode: ambient
