demo/flux/infra-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: infra-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/duration: 1h
    cert-manager.io/renew-before: 55m
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "*.apps.example.com"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose-apps: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-cert-apps-cert
    - name: tcp
      port: 5432
      protocol: TCP
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose-apps: "true"
