demo/flux/istio-kiali-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  parentRefs:
  - name: kiali-gateway
  hostnames: ["kiali.example.com"]
  rules:
  - matches:
    backendRefs:
    - name: kiali
      port: 20001
